Add `Java8toJava11` #48692
Signed-off-by: Vincent Potucek <vpotucek@me.com>

```
Changes have been made to build-plugin/spring-boot-gradle-plugin/src/test/java/org/springframework/boot/gradle/tasks/bundling/AbstractBootArchiveIntegrationTests.java by:
    org.openrewrite.java.migrate.Java8toJava11
        org.openrewrite.java.migrate.nio.file.PathsGetToPathOf
            org.openrewrite.java.ChangeMethodTargetToStatic: {methodPattern=java.nio.file.Paths get(..), fullyQualifiedTargetTypeName=java.nio.file.Path}
            org.openrewrite.java.ChangeMethodName: {methodPattern=java.nio.file.Path get(..), newMethodName=of}
Changes have been made to build-plugin/spring-boot-gradle-plugin/src/dockerTest/java/org/springframework/boot/gradle/tasks/bundling/BootBuildImageIntegrationTests.java by:
    org.openrewrite.java.migrate.Java8toJava11
        org.openrewrite.java.migrate.nio.file.PathsGetToPathOf
            org.openrewrite.java.ChangeMethodTargetToStatic: {methodPattern=java.nio.file.Paths get(..), fullyQualifiedTargetTypeName=java.nio.file.Path}
            org.openrewrite.java.ChangeMethodName: {methodPattern=java.nio.file.Path get(..), newMethodName=of}
Changes have been made to build-plugin/spring-boot-maven-plugin/src/main/java/org/springframework/boot/maven/ClassPath.java by:
    org.openrewrite.java.migrate.Java8toJava11
        org.openrewrite.java.migrate.nio.file.PathsGetToPathOf
            org.openrewrite.java.ChangeMethodTargetToStatic: {methodPattern=java.nio.file.Paths get(..), fullyQualifiedTargetTypeName=java.nio.file.Path}
            org.openrewrite.java.ChangeMethodName: {methodPattern=java.nio.file.Path get(..), newMethodName=of}
Changes have been made to build-plugin/spring-boot-maven-plugin/src/test/java/org/springframework/boot/maven/ClassPathTests.java by:
    org.openrewrite.java.migrate.Java8toJava11
        org.openrewrite.java.migrate.nio.file.PathsGetToPathOf
            org.openrewrite.java.ChangeMethodTargetToStatic: {methodPattern=j