@@ -20,7 +20,6 @@ import java.io.File;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -141,7 +140,7 @@ class DockerConfigurationMetadataTests extends AbstractJsonTests {
 
 	private String pathToResource(String resource) throws URISyntaxException {
 		URL url = getClass().getResource(resource);
-		Path parent = Paths.get(url.toURI()).getParent();
+		Path parent = Path.of(url.toURI()).getParent();
 		assertThat(parent).isNotNull();
 		return parent.toAbsolutePath().toString();
 	}
