@@ -17,7 +17,7 @@
 package org.springframework.boot;
 
 import java.lang.reflect.Method;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 
 import org.springframework.boot.SpringApplication.AbandonedRunException;
@@ -85,9 +85,9 @@ public class SpringApplicationAotProcessor extends ContextAotProcessor {
 				+ " <applicationMainClass> <sourceOutput> <resourceOutput> <classOutput> <groupId> <artifactId> <originalArgs...>");
 		Class<?> application = Class.forName(args[0]);
 		Settings settings = Settings.builder()
-			.sourceOutput(Paths.get(args[1]))
-			.resourceOutput(Paths.get(args[2]))
-			.classOutput(Paths.get(args[3]))
+			.sourceOutput(Path.of(args[1]))
+			.resourceOutput(Path.of(args[2]))
+			.classOutput(Path.of(args[3]))
 			.groupId((StringUtils.hasText(args[4])) ? args[4] : "unspecified")
 			.artifactId(args[5])
 			.build();
